fix grid-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ html, body {
 }
 .grid-wrap {
     overflow: hidden;
+    display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-auto-rows: minmax(20px, auto);
 }
@@ -675,6 +676,7 @@ footer div:nth-child(4) p {
         width: 100%;
         max-width: 640px;
         margin: 0 auto;
+        display: block;
     }
     .services .service-item button:hover {
         cursor: pointer;
